Fixing several spacing

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,8 +2,22 @@
     max-width: 75%;
 }
 
-#content .pl {
-    padding-top: 4em;
+#content {
+    margin-top: 2em;
+
+
+    // .row {
+    //     margin-top: 1em;
+    // }
+
+    // .talent-bio {
+    //     padding-top: 1.4em;
+    // }
+}
+
+#get-your-ticket {
+    margin-top: 5em;
+    margin-bottom: 40em;
 }
 
 @media screen and (max-width: 425px) {
